...
            }

            actionButton(action: otherButtonAction, viewState: viewState, foregroundColor: .textPrimary, backgroundColor: .controlsFillPrimary)
                .accessibilityIdentifier("BookmarkDialogButtonsView.otherButton")

            actionButton(action: defaultButtonAction, viewState: viewState, foregroundColor: .accentContentPrimary, backgroundColor: .accentPrimary)
                .accessibilityIdentifier("BookmarkDialogButtonsView.defaultButton")
        }
    }

    @MainActor
    private func actionButton(action: Action, viewState: ViewState, foregroundColor: DesignSystemColor, backgroundColor: DesignSystemColor) -> some View {
        Button {
...
